# Ray-tracer

./: CMakeLists.txt  README.md  base.h  camera.cpp  camera.h  lightsource.cpp  lightsource.h  main.cpp  material.cpp  material.h  random.cc  random.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spherelightsource.cpp  spherelightsource.h  tetrahedron.cpp  tetrahedron.h  triangle.cpp  triangle.h
